<resources>
    <string name="app_name">Chicken App</string>
    <string name="ch_ng">Chương</string>
    <string name="ten_khac">Tên khác:</string>
    <string name="tac_gia">Tác giả:</string>
    <string name="tinh_trang">Tình trạng:</string>
    <string name="doc_truyen">Đọc truyện</string>
    <string name="them_yeu_thich">Yêu thích</string>
    <string name="mo_ta">Mô tả</string>
    <string name="noi_dung">Vừa làm nhân vật phản diện Lăng Thần vừa làm anh hùng Diệp Tử Mộ, có đến mấy chục năm tình cảm gút mắc... Đương nhiên, là đều muốn đánh bại đối phương cái chủng loại kia cừu thị! Nhưng mà, ngoài ý muốn khởi động thiết lập lại khóa để Lăng Thần về tới mười bảy tuổi! Đây quả thực là cơ hội trời cho a! Thừa dịp anh hùng chưa lớn lên, đương nhiên là trước phải nhổ cỏ tận gốc!</string>
    <string name="danh_sach_chuong">Danh sách chương</string>
    <string name="luot_xem">Lượt xem:</string>
    <string name="tim_kiem">Tìm kiếm...</string>
    <string name="home">Trang chủ</string>
    <string name="history">Lịch sử</string>
    <string name="search">Tìm kiếm</string>
    <string name="favorite">Yêu thích</string>
    <string name="unlike">Không thích</string>
    <string name="setting">Cài đặt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Đang tính làm. Nhưng bây giờ thì không</string>
    <string name="dang_doc">Đang đọc:</string>
    <string name="xoa">Xóa</string>
    <string name="doc_tiep">Đọc tiếp</string>
    <string name="nothing">Không có truyện nào cả.</string>
    <string name="login">Đăng Nhập</string>
    <string name="register">Đăng ký</string>
    <string name="reset">Reset data</string>
    <string name="backup">Sao lưu / khôi phục</string>
    <string name="next_chap">Cuộn để chuyển chương</string>
    <string name="no_new_chapter">Chưa có chapter mới!</string>
    <string name="chapter_new">Chapter mới nhất:</string>
    <string name="start_chapter">Start chapter %1$s</string>
    <string name="end_chapter">End chapter %1$s</string>
    <string name="chapter">Chapter %1$s</string>
</resources>