<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="10dp"
    android:paddingTop="10dp"
    android:paddingStart="10dp"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".fragments.SettingFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:textAlignment="center"
        android:textColor="@color/secondary_text"
        android:textSize="30sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/primary"/>


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchNextChapter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/next_chap"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/backup"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"

        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/reset"
        android:textSize="18sp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/head_color"
        android:text="@string/login"
        android:textColor="@color/white_text"
        android:textSize="18sp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/primary"
        android:text="@string/register"
        android:textColor="@color/white_text"
        android:textSize="18sp"
        />

</LinearLayout>